# avium

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Project.txt.in  README.md  TODO.md  avium-descriptor.xml.in  codegen.html  core.html  file.html  genindex.html  index.html  io.html  path.html  reflect.html  search.html  searchindex.js  string.html  testgen.py  testing.html  typeinfo.html
.github/workflows/: cmake.yml  codeql-analysis.yml  cross-platform.yml  docs.yml  main.yml
ci/: build-docs.sh  build-lib.sh  build.sh  coverage.sh  install-deps.sh  prepare.sh  site.sh  submodules.sh  test.sh
cmake/: DL.cmake  FindNaturalDocs.cmake  FindSphinx.cmake  FindXUnitViewer.cmake  GC.cmake  TCC.cmake
docs/: CMakeLists.txt  Doxyfile.in  Project.txt  Project.txt.in  array-list.rst  array.rst  codegen.rst  conf.py.in  core.rst  error.rst  file.rst  fmt.rst  index.rst  index.rst.in  io.rst  optional.rst  options.rst  path.rst  reflect.rst  result.rst  runtime.rst  string.rst  typeinfo.rst  types.rst  value.rst  version.rst
examples/: classes.c  vtable.c
extras/: CMakeLists.txt  basename.c  dlfcn.c
extras/include/: dlfcn.h
extras/include/avium/: basename.h  dlfcn.h
include/: CMakeLists.txt  avium.h
include/avium/: aliases.h  alloc.h  array-list.h  array.h  avium.h  codegen.h  collection.h  config.h.in  core.h  debug.h  error.h  file.h  fmt.h  internal.h  io.h  misc.h  object.h  optional.h  options.h  path.h  process.h  prologue.h  reflect.h  resources.h  result.h  runtime.h  string.h  task.h  testing.h  thread.h  threads.h  typeinfo.h  types.h  value.h  vector.h  version.h
include/avium/collections/: array-list.h  list.h
include/avium/private/: basename.h  constants.h  errors.h  realpath.h  resource.h  resources.h  task-context.h  thread-context.h  threads.h  virtual.h
scripts/: api-sanity-check.sh.in  build-docs.sh  build.ps1  build.sh  coverage.sh  gcovr.sh  gen-docs.sh  gen-linux.sh  gen-tests.sh  install-dependencies.sh  run-test.sh  run-test.sh.in  test.ps1  test.sh  testgen.py
sources/: testing.rst.txt
src/: CMakeLists.txt  alloc.c  array.c  codegen.c  collection.c  core.c  error.c  file-stream.c  file.c  fmt.c  init.c  io.c  memory-stream.c  module.c  object.c  options.c  prologue.c  reflect.c  result.c  runtime.c  string.c  testing.c  typeinfo.c  types.c  value.c  version.c
src/argparse/: CMakeLists.txt  value.c
src/avm.argparse/: CMakeLists.txt  options.c  value.c
src/avm.collections/: CMakeLists.txt  array-list.c  list.c
src/avm.core/: CMakeLists.txt  core.c  error.c  runtime.c  string.c  testing.c  threads.c  typeinfo.c  types.c  version.c
src/avm.io/: CMakeLists.txt  file-stream.c  file.c  io.c  memory-stream.c  path.c
src/avm.reflect/: CMakeLists.txt  codegen.c  reflect.c
src/avm.test/: CMakeLists.txt  runner.c
src/core/: CMakeLists.txt  core.c  debug.c  error.c  process-posix.c  process.c  resources.c  string.c  task.c  thread-posix.c  thread-win32.c  thread.c  threads.c  typeinfo.c  vector.c
src/io/: CMakeLists.txt  file-stream.c  file.c  memory-stream.c
test/: CMakeLists.txt  test.c
tests/: CMakeLists.txt  array-list.c  array.c  avium-descriptor.xml.in  file.c  io.c  optional.c  options.c  path.c  reflect.c  result.c  string.c  task.c  tests.c  thread.c  typeinfo.c  value.c  vector.c  version.c
